<resources>
    <string name="app_name">Kita Market</string>
    <string name="add_customer_label">Add customer</string>
    <string name="customer_articles">Customer articles</string>
    <string name="create_label">Create</string>
    <string name="sold_articles">Sold articles</string>
    <string name="done_label">Done</string>
    <string name="delete_label">Delete</string>
    <string name="customer_information">Customer information</string>
    <string name="articles_for_sale">For sell</string>
    <string name="full_name_label">Full name:</string>
    <string name="article_price_hint">Set price</string>
    <string name="register">Register</string>
    <string name="personal_number_label">Social security number:</string>
    <string name="create_new_customer">Create new customer</string>
    <string name="price_label">Price:</string>
    <string name="balance">Balance:</string>
    <string name="phone_number_label">Phone number:</string>
    <string name="article_name_hint">Type article name:</string>
    <string name="n">Note :</string>
    <string name="article_name_label">Article name</string>
    <string name="full_name_hint">Type your first and last name</string>
    <string name="personal_number_hint">Use 12 digits form</string>
    <string name="phone_number_hint">type full phone number starts with 0</string>
    <string name="create_new_article">Add article</string>
    <string name="add_label">Add</string>
    <string name="add_more_button">Add more</string>
    <string name="error_label">Error</string>
    <string name="alarm_ok">Ok</string>
    <string name="update_label">Update</string>
    <string name="delete_alarm_title">Warning</string>
    <string name="alarm_message">Do you really want to delete this article?</string>
    <string name="alarm_yes">Yes</string>
    <string name="alarm_no">No</string>
    <string name="search_hint">Type customer social security number:</string>
    <string name="search_article_hint">Type article id</string>
    <string name="new_sell_label">New sell</string>
    <string name="total_label">Total</string>
    <string name="sell_label">Sell</string>
    <string name="wrong_personal_number_length">Personal number must be exactly</string>
    <string name="chars_lable">" chars"</string>
    <string name="personal_number_only_digits_requerd">Personal number must contain only numbers</string>
    <string name="custome_not_exist">This customer is not registered</string>
    <string name="database_error">Database Error</string>
    <string name="custome_exist">This customer is already exist</string>
    <string name="created_successfully">"CREATED SUCCESSFULLY"</string>
    <string name="sell_error_message_label">Sell has not been done some articles has
        been already registered check the list.</string>
    <string name="no_balance_added">The last Article has been marked as sold but no balance was added to the owner</string>
    <string name="sold_article_error">"The last article is already sold "</string>
    <string name="article_not_exist">This Article does not exist</string>
    <string name="successed">Successed</string>
    <string name="valid">valid</string>
    <string name="join_word_and">" and "</string>
    <string name="short_phone_number">"Phone number should be at least "</string>
    <string name="digits">" digits"</string>
    <string name="long_phone_number">"Phone number should be max "</string>
    <string name="digits_only_required">only digits are allowed</string>
    <string name="short_full_name">"Full name should be at least "</string>
    <string name="long_full_name">"FullName should be max "</string>
    <string name="short_Article_name">"Article name should be at least "</string>
    <string name="long_Article_name">"Article name should be max "</string>
    <string name="long_prics">"Price should be max "</string>
    <string name="long_note">"Article note should be max "</string>
    <string name="article_id_label">Article Id</string>
    <string name="QR_image_description">QR Code Image</string>
    <string name="empty_data_error">Enter some data</string>
    <string name="QR_code_createing_error">"QR could not be generated. please use Article id instead "</string>
    <string name="QR_code_reading_error">QR code reading error. please use Article id instead</string>
    <string name="scan_label">Scan QR Code</string>
    <string name="camera_permission_required">You need Camera Permission</string>
    <string name="article_exist">This article has been already added to the list.</string>
    <string name="customer_info_label">Customer Info</string>
    <string name="name_label">Name</string>
    <string name="time_stamp_label">Timestamp</string>
    <string name="owner_label">Owner</string>
    <string name="sold_by_label">Sold by</string>
    <string name="zero_balance">0.0</string>
    <string name="id_label">Id</string>
    <string name="article_Id_required">Article Id is required</string>
    <string name="note_label">Note</string>
    <string name="price_required">Price required</string>
    <string name="QR_code_dissmatch_id_length">The QR contains somthiong that does not match the required length id. It could be becouse thes QR dose not belong to our market</string>


</resources>