<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/QR_image_view"
        android:layout_width="@dimen/QR_image_medium"
        android:layout_height="@dimen/QR_image_medium"
        android:layout_margin="@dimen/margin_large"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/QR_image_description"/>

    <TextView
        android:id="@+id/article_id_label_QR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:text="@string/article_id_label" />

    <TextView
        android:id="@+id/article_id_value_QR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/add_more_button_QR"
        android:layout_width="@dimen/button_width_large"
        android:layout_height="@dimen/button_hight_large"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/add_more_button"
        android:background="@drawable/search_view_background"
        />

    <Button
        android:id="@+id/done_adding_button_QR"
        android:layout_width="@dimen/button_width_medium"
        android:layout_height="@dimen/button_hight_medium"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/done_label"
        android:background="@drawable/search_view_background" />

</LinearLayout>