<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/customer_information_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_information"
        android:padding="10dp"
        android:layout_margin="@dimen/margin_large"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:id="@+id/customer_info_full_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/customer_info_full_name_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/full_name_label"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/customer_info_full_name_value"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/personal_number_label" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/customer_info_personal_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/customer_info_personal_number_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/personal_number_label" />

        <TextView
            android:id="@+id/customer_info_personal_number_value"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/personal_number_label" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/customer_info_phone_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_large"
        android:gravity="center">

        <TextView
            android:id="@+id/customer_info_phone_number_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/phone_number_label" />
        <TextView
            android:id="@+id/create_account_phone_number_value"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/phone_number_label" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/customer_info_balance_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_large"
        android:gravity="center">

        <TextView
            android:id="@+id/customer_info_balance_label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/balance" />
        <TextView
            android:id="@+id/customer_info_balance_value"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/zero_balance" />

    </LinearLayout>

</LinearLayout>

