<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArticleCreationActivity">

    <TextView
        android:id="@+id/create_article_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_article"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/create_article_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_article_view_title">

        <TextView
            android:id="@+id/create_article_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:minHeight="@dimen/min_hight_text"
            android:text="@string/article_name_label" />

        <EditText
            android:id="@+id/create_article_name_input"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_weight="3"
            android:hint="@string/article_name_hint"
            android:inputType="textAutoComplete"
            android:minHeight="@dimen/min_hight_text"
            android:padding="10dp"
            android:autofillHints="" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/create_article_price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_article_name_layout">
        <TextView
            android:id="@+id/create_article_price_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:minHeight="@dimen/min_hight_text"
            android:text="@string/price_label" />

        <EditText
            android:id="@+id/create_article_price_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:minHeight="@dimen/min_hight_text"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:hint="@string/article_price_hint"
            android:inputType="numberDecimal"
            android:autofillHints="price"
            android:textColorHint="#757575" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/create_article_note_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_article_price_layout">

        <TextView
            android:id="@+id/create_article_note_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:minHeight="@dimen/min_hight_text"
            android:text="@string/n" />

        <EditText
            android:id="@+id/create_article_note_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:minHeight="@dimen/min_hight_text"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:hint="@string/n"
            android:inputType="textAutoComplete"
            android:autofillHints="text"
            android:textColorHint="#757575" />
    </LinearLayout>

    <Button
        android:id="@+id/add_article_button"
        android:layout_width="@dimen/button_width_large"
        android:layout_height="@dimen/button_hight_large"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/search_view_background"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:text="@string/add_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
