<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:addStatesFromChildren="false"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/main_search_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:background="@drawable/search_view_background"
        android:backgroundTint="#EAE1E1"
        android:ems="10"
        android:hint="@string/search_hint"
        android:foregroundTint="#FFFCFC"
        android:inputType="number"
        android:padding="10dp"
        android:autofillHints="personalNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_customer_button"
        android:layout_width="200dp"
        android:layout_height="@dimen/button_hight_large"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/search_view_background"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:text="@string/add_customer_label"
        app:layout_constraintBottom_toTopOf="@+id/new_sell_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_articles_buttons_layout" />

    <Button
        android:id="@+id/new_sell_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_hight_large"
        android:layout_margin="10dp"
        android:background="@drawable/search_view_background"
        android:queryBackground="@android:color/transparent"
        android:text="@string/new_sell_label"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/customer_articles_buttons_layout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_search_bar">

        <Button
            android:id="@+id/customer_articles_button"
            android:layout_width="@dimen/button_width_large"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/search_view_background"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:text="@string/customer_articles" />

        <Button
            android:id="@+id/customer_info_button"
            android:layout_width="@dimen/button_width_large"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/search_view_background"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:text="@string/customer_info_label" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>