<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SellActivity">

    <TextView
        android:id="@+id/sell_textView"
        android:layout_width="148dp"
        android:layout_height="41dp"
        android:text="@string/new_sell_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sell_search_bar"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:background="@drawable/search_view_background"
        android:backgroundTint="#EAE1E1"
        android:ems="10"
        android:hint="@string/search_article_hint"
        android:foregroundTint="#FFFCFC"
        android:inputType="number"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/sell_add_button"
        app:layout_constraintTop_toBottomOf="@+id/sell_textView"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/sell_add_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:background="@drawable/search_view_background"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:text="@string/add_label"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sell_textView" />
    <Button
        android:id="@+id/scan_button"
        android:layout_width="@dimen/button_width_medium"
        android:layout_height="@dimen/button_hight_medium"
        android:layout_margin="10dp"
        android:background="@drawable/search_view_background"
        android:iconifiedByDefault="false"
        android:queryBackground="@android:color/transparent"
        android:text="@string/scan_label"
        android:padding="10dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sell_search_bar" />

    <LinearLayout
        android:id="@+id/sell_products_list_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:background="@color/underline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/sell_total_label_textView"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center_horizontal"
            android:text="@string/total_label" />
        <TextView
            android:id="@+id/sell_total_value_textView"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_margin="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_gravity="center_horizontal" />
        <Button
            android:id="@+id/submit_sell"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/search_view_background"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:text="@string/sell_label" />

    </LinearLayout>
    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/sell_products_list_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_button"
        android:id="@+id/sell_list_fragment_container"
        />




</androidx.constraintlayout.widget.ConstraintLayout>